[project]
name = "az-ssh-wrapper"
version = "1.0.0"
description = "SSH Wrapper for Azure CLI's `az ssh` command"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
az-ssh = "az_ssh_wrapper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["az_ssh_wrapper.py"]
